[B]1.1.21[/B]
Code improvements, cleanup
ColorPicker dialog improvements
DialogSelect using poster instead icon, if available
Scrollbar improvements
Texture improvements
Option to select media flags added
Added homemenu viewtype selector
Minor adjustments of now playing
Fixed a lot of issues
Ultra HD Blu Ray icon added
Language strings updated by several contributors, thx!
Addon is renamed to Arctic: Zephyr - Reloaded
Added option to hide all indicators
Added widget 6
Added custom powermenu

[B]1.1.20[/B]
Added netflix homemenu layout
Added custom widgets

[B]1.1.19[/B]
Fixed issues, code cleanup
Improvements on animations
Added custom coreelec settings

[B]1.1.18[/B]
Code improvements
Fixed issues

[B]1.1.17[/B]
Improvements on dialoginfo overlay
Fixed issue with sets info
Added support for script.skin.info.service

[B]1.1.16[/B]
Widgets cleanup, improvements on supported addons section

[B]1.1.15[/B]
Fixed a lot of issues, cleaned up the code
Cinema experience support of embuary.helper addon added
Widgets added
Now playing info added
Dialog settings added
Fixed rating flags
Improvements on osd/homemenu/views

[B]1.1.14[/B]
fixed issues

[B]1.1.13[/B]
Texture improvements
Fixed a lot of issues
Rework on filemanager
Added tempo function
Added new kodi 19 infolabels
Added german telecast offers support
Code improvements

[B]1.1.12[/B]
Cleanup the code
Only icons version added to vertical multi widget homemenu
Added header label for hubs
Improvements on color-settings, blur settings
Switched to tmdbhelper for next aired info
More changes for matrix compatibility

[B]1.1.1[/B]
First matrix version