@@ -1,3 +1,8 @@
+[B]1.1.22[/B]
+Improvements on plot overlays
+Code and texture improvements, cleanup
+Language strings updated by several contributors, thx!
+
 [B]1.1.21[/B]
 Code improvements, cleanup
 ColorPicker dialog improvements
